--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "type": "module",
+  "scripts": {
+    "format": "prettier --list-different --write lib/",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prettier": "^3.3.3"
   }
 }
